Implemented OFFSETOF function and some cleanup